<resources>
    <string name="app_name">YDIG</string>
    <string name="facebook_app_id">428236751145130</string>
    <string name="fb_login_protocol_scheme">fb428236751145130</string>
    <string name="policy">kami menjamin semua detail yang Anda kirimkan akan dirahasiakan dan tidak akan dibagikan dengan pihak lain untuk tujuan apa pun</string>
    <string name="memulai">Memulai</string>
    <string name="bergabung_dengan_dialog_islam_garuda">Bergabung dengan Dialog Islam Garuda</string>
    <string name="gunakan_aku_facebook">Gunakan Aku Facebook</string>
    <string name="atau">atau</string>
    <string name="gunakan_akun_google">Gunakan Akun Google</string>
    <string name="radio_streaming">Radio Streaming</string>
    <string name="dialog_islam_garuda">Dialog Islam Garuda</string>
    <string name="sign_out">Sign Out</string>
    <string name="komentar_pertanyaan">Ketikan Pesan</string>
    <string name="judul_kajian">Judul Kajian</string>
    <string name="pemateri">Pemateri</string>
    <string name="stop">Stop</string>
    <string name="play">Play</string>
    <string name="streaming_status">Streaming Status</string>
    <string name="koneksi_buruk">Stream Buffering / memuat Data …</string>
    <string name="Mohon_tunggu">Mohon tunggu, sedang menghubungi server…</string>
    <string name="nama">nama</string>
    <string name="jam"> jam</string>
    <string name="pesan">pesan</string>
    <string name="pesan_baru">Pesan Baru</string>
    <string name="anda">anda</string>
    <string name="ket_streaming_failed">Saat ini tidak ada Live On Air Streaming Radio Dialog Islam Garuda di 105.5 FM.</string>
    <string name="mohon_maaf">Mohon Maaf</string>
    <string name="pertanyaan">Pertanyaan</string>
    <string name="komentar">Komentar</string>
    <string name="saran">Saran</string>
    <string name="tentang_kami">Tentang YDIG</string>
    <string name="profile">Profil</string>
    <string name="ket_serverdown">Anda akan menerima notifikasi pada saat Radio Streaming on iar, klik notifikasi tersebut dan akan di arahkan ke halaman ini untuk mendengarkan kajian dan berinteraksi secara langsung dengan para nara sumber</string>
    <string name="title_streaming">Saat Ini tidak ada Kajian On air Streaming</string>
    <string name="judul_serverdown">YDIG…</string>
    <string name="nochat">Jadilah yang pertama Berinteraksi</string>
    <string name="ket_nochat">gunakan media interaksi chat dengan bijaksana</string>
</resources>
