<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_login"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="@drawable/background"
    tools:context=".LoginActivity">

    <TextView
        android:fontFamily="@font/robotobold"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/memulai"
        android:textSize="18sp"
        android:textColor="@color/putih"/>
    <TextView
        android:fontFamily="@font/robotothin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bergabung_dengan_dialog_islam_garuda"
        android:textColor="@color/putih"/>

    <FrameLayout
        android:layout_marginTop="30dp"
        android:id="@+id/FrameLayoutFacebook"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.facebook.login.widget.LoginButton
            android:id="@+id/signInFacebook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone" />
        <Button
            android:fontFamily="@font/robotobold"
            android:drawablePadding="20dp"
            android:gravity="left|center_vertical"
            android:drawableLeft="@drawable/fb"
            android:background="@drawable/button_putih"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/button_facebook"
            android:textAllCaps="false"
            android:text="@string/gunakan_aku_facebook"
            android:textColor="@color/colorPrimaryDark"
            android:drawableStart="@drawable/fb"
            tools:ignore="RtlHardcoded" />
    </FrameLayout>

    <TextView
        android:layout_margin="10dp"
        android:text="@string/atau"
        android:textColor="@color/putih"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <FrameLayout
        android:id="@+id/FrameLayoutGoogle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.gms.common.SignInButton
            android:id="@+id/signInGoogle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone" />

        <Button
            android:fontFamily="@font/robotobold"
            android:drawablePadding="20dp"
            android:gravity="left|center_vertical"
            android:drawableLeft="@drawable/google"
            android:background="@drawable/button_putih"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/button_google"
            android:textAllCaps="false"
            android:text="@string/gunakan_akun_google"
            android:textColor="@color/colorPrimaryDark"
            android:drawableStart="@drawable/google"
            tools:ignore="RtlHardcoded" />
    </FrameLayout>

    <TextView
        android:fontFamily="@font/robotolight"
        android:layout_marginTop="40dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/policy"
        android:textSize="12sp"
        android:textColor="@color/putih"/>

    <ProgressBar
        android:visibility="gone"
        android:id="@+id/login_progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>