<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout_main"
    android:background="@color/putih"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!--Toolbar-->
        <com.google.android.material.appbar.AppBarLayout
            android:background="@color/putih"
            android:id="@+id/bar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                app:layout_scrollFlags="scroll|enterAlways|snap"
                android:background="@color/putih">

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:src="@drawable/ydig"
                    android:layout_gravity="start"
                    tools:ignore="ContentDescription" />
                <LinearLayout
                    android:orientation="vertical"
                    android:paddingStart="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:ignore="RtlSymmetry">
                    <TextView
                        android:id="@+id/titleBar"
                        android:textSize="15sp"
                        android:fontFamily="@font/robotoregular"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/radio_streaming"
                        android:layout_gravity="start"/>

                    <TextView
                        android:textSize="12sp"
                        android:fontFamily="@font/robotolight"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dialog_islam_garuda"
                        android:layout_gravity="start"/>

                </LinearLayout>
                <TextView
                    android:textSize="20sp"
                    android:fontFamily="@font/robotothin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="25dp"
                    android:text="@string/dialog_islam_garuda"
                    android:layout_gravity="start"/>

            </androidx.appcompat.widget.Toolbar>

            <RelativeLayout
                android:layout_below="@+id/toolbar"
                android:id="@+id/relPlayer"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_marginTop="10dp"
                    android:id="@+id/judul_kajian"
                    android:textSize="16sp"
                    android:fontFamily="@font/robotoregular"
                    android:textAlignment="center"
                    android:text="@string/judul_kajian"
                    android:visibility="gone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <Button
                    android:visibility="gone"
                    android:id="@+id/buttonStop"
                    android:layout_marginTop="10dp"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@+id/judul_kajian"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_stop"
                    android:text="@string/stop"
                    android:fontFamily="@font/robotothin"
                    android:background="@drawable/button"/>

                <Button
                    android:id="@+id/buttonPlay"
                    android:visibility="visible"
                    android:layout_marginTop="10dp"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@+id/judul_kajian"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_play"
                    android:text="@string/play"
                    android:fontFamily="@font/robotothin"
                    android:background="@drawable/button"/>

                <ProgressBar
                    android:visibility="gone"
                    android:layout_marginBottom="19dp"
                    android:id="@+id/progress_play"
                    android:layout_marginTop="23dp"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@+id/judul_kajian"
                    android:layout_width="25dp"
                    android:layout_height="25dp" />

            </RelativeLayout>
        </com.google.android.material.appbar.AppBarLayout>



        <LinearLayout
            android:layout_below="@+id/bar_layout"
            android:orientation="vertical"
            android:weightSum="2"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.recyclerview.widget.RecyclerView
                android:layout_weight="2"
                android:id="@+id/streaming_recyclerview"
                android:layout_width="match_parent"
                android:layout_height="0dp" />

            <LinearLayout
                android:padding="10dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:weightSum="3"
                android:layout_height="wrap_content"
                tools:ignore="UselessParent">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/nav_image_view"
                    android:layout_width="42dp"
                    android:layout_height="42dp"
                    android:layout_gravity="center"
                    app:civ_border_color="#fff"
                    app:civ_border_width="2dp"/>

                <EditText
                    android:fontFamily="@font/robotolight"
                    android:id="@+id/streaming_edittext"
                    android:layout_weight="3"
                    android:hint="@string/komentar_pertanyaan"
                    android:padding="10dp"
                    android:layout_marginStart="5dp"
                    android:paddingStart="20dp"
                    android:paddingLeft="20dp"
                    android:paddingEnd="20dp"
                    android:paddingRight="20dp"
                    android:inputType="textMultiLine"
                    android:overScrollMode="always"
                    android:scrollbarStyle="insideInset"
                    android:scrollbars="vertical"
                    android:background="@drawable/button_putih"
                    android:textCursorDrawable="@null"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    tools:ignore="Autofill" />

                <ProgressBar
                    android:visibility="gone"
                    android:id="@+id/progressbar_send"
                    android:layout_marginStart="10dp"
                    android:layout_gravity="center"
                    android:layout_width="25dp"
                    android:layout_height="25dp" />
                <Button
                    android:id="@+id/streaming_sendpesan"
                    android:layout_gravity="center"
                    android:layout_marginStart="10dp"
                    android:background="@drawable/button_send"
                    android:layout_width="25dp"
                    android:layout_height="30dp" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:padding="10dp"
            android:visibility="gone"
            android:layout_below="@+id/bar_layout"
            android:id="@+id/main_status_streaming"
            android:textSize="12sp"
            android:text="@string/streaming_status"
            android:fontFamily="@font/robotothin"
            android:layout_width="match_parent"
            android:background="@color/merahmarun"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:layout_height="wrap_content" />

        <androidx.cardview.widget.CardView
            android:visibility="gone"
            android:id="@+id/cv_pesan_baru"
            android:layout_marginTop="10dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/bar_layout"
            app:cardCornerRadius="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:textColor="@color/colorPrimary"
                android:fontFamily="@font/robotobold"
                android:layout_margin="10dp"
                android:text="@string/pesan_baru"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </androidx.cardview.widget.CardView>
    </RelativeLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>